Fix loan table spacing

--- a/client/src/components/LoanList/LoanList.scss
+++ b/client/src/components/LoanList/LoanList.scss
@@ -2,10 +2,13 @@
 
 .loan-list {
   list-style: none;
+  margin: 0;
+  padding-left: 0;
 }
 
 .loan-list-row {
   display: flex;
+  padding: 15px 0;
 
   &:not(:last-child) {
     border-bottom: 1px solid $grey600;
